# BRIK-Project-Initializer

./: .brik-cert.json  .brik-cert.sha256  .brik-hash-report.json  .brik-test-cert.json  .gitignore  BRIK-AI-README.md  BRIK-BADGES.md  BRIK_V5_CERTIFICATION.md  CHANGELOG.md  CIRCUITALIDAD.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_TEMPLATE.md  EXECUTIVE_SUMMARY.md  FAILURE_MONITORING.md  GITHUB_CLI_SETUP.sh  GITHUB_MANAGEMENT_SETUP.md  INSTALL.md  ISSUES_DEFINITION_COMPLETE.md  L3_CERTIFICATION_DEPLOYMENT_SUMMARY.md  L4_AGI_PATTERNS.md  L4_AGI_PATTERNS_PHASE2.md  L4_CERTIFICATION_ALIGNMENT_REPORT.md  L4_CERTIFICATION_FINAL_REPORT.md  LICENSE  README-AI.md  README.md  RELEASE_ISSUES_DEFINITION.md  RELEASE_ORCHESTRATION_PLAN.md  SECURITY.md  SECURITY_TEMPLATE.md  V1_MASTER_PLAN_EXECUTION_SUMMARY.md  agents.md  agents.md.backup-20250825110348  brik-ai-fixed.js  brik-ai-simple.js  brik-ai.js  brik-cli-ai.js  brik-cli-l4-enhanced.js  (+45 more)
.github/: dependabot.yml  pull_request_template.md
ai-agents/: agent-manager.js  brik-code-generator.js  claude-sdk-manager.js  claude-web-automation.js
brik-factory-rust/: .brik-dna.yml  Cargo.toml
demo-brik/: .brik-cert.json  .brik-cert.sha256  .brik-dna.yml  Cargo.toml
demo-py/: .brik-dna.yml
demo-ts/: .brik-dna.yml  CIRCUITALIDAD.md  package.json  (+5 more)
templates/rust-axum/: Cargo.toml  openapi.yaml
templates/rust-axum/src/api/users/gates/: auth_gate.rs  gate_result.rs
templates/rust-axum/src/shared/observability/: logger.rs
templates/rust-axum/src/shared/types/: result.rs
test-ecommerce/: .brik-cert.json  .brik-cert.sha256  .brik-dna.yml  Cargo.toml  README.md  architecture-classification.json  brik-validation-report.json  domain-analysis.json
test-ecommerce/docs/: ARCHITECTURE.md
test-ecommerce/scripts/: brik-certify.sh
test-ecommerce/src/: lib.rs  main.rs
test-ecommerce/src/components/: mod.rs  orderrepository.rs  postgresqlintegration_wrapper.rs  productrepository.rs  redisintegration_wrapper.rs  stripeintegration_wrapper.rs  userrepository.rs
test-ecommerce/src/core/: business_rules.rs  mod.rs  order.rs  product.rs  user.rs
test-ecommerce/src/living-layer/: businessmetricsanalyzer.rs  metrics_analyzer.rs  mod.rs  performancemonitor.rs
test-ecommerce/tests/immutability/: immutability_tests.rs
test-ecommerce/tests/integration/: test_postgresqlintegration.rs  test_redisintegration.rs  test_stripeintegration.rs
test-ecommerce/tests/property/: property_tests.rs
test-ecommerce/tests/unit/: test_business_rules.rs  test_order.rs  test_product.rs  test_user.rs
(+171 files in other folders)
