[package]
name = "ecommerce-api"
version = "0.1.0"
edition = "2021"
description = "ecommerce-api - Generated with BRIK Framework"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Integration dependencies
tokio-postgres = "0.7"
redis = "0.22"
reqwest = "0.11"

[dev-dependencies]
proptest = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "ecommerce_api"
path = "src/lib.rs"